--- a/W2;L2.md
+++ b/W2;L2.md
@@ -71,3 +71,10 @@ man.NOM	boy-ACC		hit.3.SG
 3. **Active** - Agent == subject
 4. **Passive** - Agent != subject
 
+## Pragmatics
+
+> The unspoken meaning of the language. Not just what you are saying literally, but its interpretation.
+
+Example: When you say "I'm cold" that means to ppl around you "Close the window" or "Offer your jacket." When you're having a conversation, you say "OH! I'm late." and that means "I have to go."
+
+- People who are "socially awkward" often do not understand the pragmatic use of language.
